<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loadimage.LoadImageFragment">

    <TextView
        android:id="@+id/titleUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageviewCamera"
        android:text="@string/title_default_load_image"
        android:textAlignment="center"
        android:textSize="@dimen/fount_size_25"
        android:layout_marginTop="@dimen/margin_10"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageviewCamera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_300"
        app:layout_constraintTop_toBottomOf="@+id/titleUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/takePic"
        android:src="@drawable/movies_icon_159164"
        />

    <Button
        android:id="@+id/takePic"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        android:background="@drawable/circle"
        app:layout_constraintTop_toBottomOf="@+id/imageviewCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/selectPic"
        app:layout_constraintBottom_toTopOf="@+id/uploadPic"
        android:layout_margin="@dimen/margin_20"
        android:text="@string/text_button_take_photo"
        />

    <Button
        android:id="@+id/selectPic"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        android:background="@drawable/circle"
        app:layout_constraintTop_toBottomOf="@+id/imageviewCamera"
        app:layout_constraintStart_toEndOf="@+id/takePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/uploadPic"
        android:layout_margin="@dimen/margin_20"
        android:text="@string/text_button_select_pic"/>

    <Button
        android:id="@+id/uploadPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_20"
        android:text="@string/text_button_upload_pic"/>

</androidx.constraintlayout.widget.ConstraintLayout>