<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.MoviesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textStyle="italic"
                android:textSize="@dimen/fount_size_25"/>

            <TextView
                android:id="@+id/top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/fount_size_25"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/topRatedRecycler"
                android:text="@string/title_top_rated"
                />

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/topRatedRecycler"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toBottomOf="@+id/top_rated"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/popular"
                />

            <TextView
                android:id="@+id/popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/fount_size_25"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topRatedRecycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/popularRecycler"
                android:text="@string/title_popular" />

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/popularRecycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/carousel_height"
                app:layout_constraintTop_toBottomOf="@+id/popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/upComing"
                />

            <TextView
                android:id="@+id/upComing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/fount_size_25"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularRecycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/upComingRecycler"
                android:text="@string/title_upcoming" />

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/upComingRecycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/carousel_height"
                app:layout_constraintTop_toBottomOf="@+id/upComing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>